[tool.property]
license = "Apache 2.0"

[build-system]
requires = [
    "pybind11>=2.9.2",
    "setuptools",
    "wheel",
    "protobuf==5.29.6",
    "packaging>=24.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "neug"
requires-python = ">=3.8"
version = "0.1.0"
description = "GraphScope NeuG for python"
authors = [{name="GraphScope Team", email="graphscope@alibaba-inc.com"}]
readme = "README.md"
license = {text = "Apache License 2.0"}
keywords = ["Graph", "Python", "Embedded", "Graph Database"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "packaging>=24.2",
    "protobuf==5.29.6",
    "requests",
    "click>=8.0.0",
    "tabulate>=0.9.0",
    "PyYAML>=6.0.2",
    "tqdm",
    "Flask",
    "Flask-Cors"
]

[project.scripts]
neug-cli = "neug.neug_cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=6.2.5",
    "black>=23.3.0",
    "flake8==4.0.1",
    "isort==5.10.1",
]

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
enable = ["cpython-prerelease"]
skip = ["*-musllinux_*", "*i686*"]
environment-pass = ["BUILD_TYPE", "CMAKE_BUILD_PARALLEL_LEVEL", "CMAKE_PREFIX_PATH", "MACOSX_DEPLOYMENT_TARGET", "PYBIND11_FINDPYTHON", "CI_INSTALL_EXTENSIONS"]
manylinux-x86_64-image = "neug-registry.cn-hongkong.cr.aliyuncs.com/neug/neug-manylinux:v0.1.0-x86_64"
manylinux-aarch64-image = "neug-registry.cn-hongkong.cr.aliyuncs.com/neug/neug-manylinux:v0.1.0-arm64"

[tool.cibuildwheel.linux]
before-all = ["git submodule update --init --recursive"]
before-build = [". /root/.neug_env"]
environment = {CMAKE_PREFIX_PATH="/opt/neug/", OPENSSL_ROOT_DIR="/opt/neug", LIBRARY_PATH="/opt/neug/lib:/opt/neug/lib64", LD_LIBRARY_PATH="/opt/neug/lib:/opt/neug/lib64:$LD_LIBRARY_PATH",  DYLD_LIBRARY_PATH="/opt/neug/lib:/opt/neug/lib64:$DYLD_LIBRARY_PATH", PYBIND11_FINDPYTHON="OFF"}

[tool.cibuildwheel.macos]
before-all = ["git submodule update --init --recursive"]

environment = {MACOSX_DEPLOYMENT_TARGET="10.15", CMAKE_PREFIX_PATH="/opt/neug/", DYLD_LIBRARY_PATH="/opt/neug/lib:/opt/neug/lib64", OPENSSL_ROOT_DIR="/opt/neug"}
repair-wheel-command = [
    'source ~/.neug_env',
    'delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}'
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
